# AegisAI

./: .gitignore  AWS_EKS_DEPLOYMENT_GUIDE.md  KUBECTL_COMMANDS.md  KUBERNETES_SETUP.md  Makefile  OpenPoints.xlsx  README.md  STATUS.md  WORK_PLAN.md  docker-compose-example.txt  docker-compose.yml  prompt.md  pyproject.toml  question
.github/workflows/: pylint.yaml
aws/: create-sqs-queues.ps1
common/nicegui_frontend/: README.md  main.py  pyproject.toml
common/nicegui_frontend/support/: reset_css_for_nicegui.py
common/streamlit_frontend/: main.py  pyproject.toml
common/streamlit_frontend/core/: gui.py
k8s/: ARCHITECTURE.md  HPA_PDB_EXPLAINED.md  Makefile  build-all-images.ps1  build-docker-images.ps1  build-images.ps1  deploy-k8s.ps1  deploy.ps1  deploy.sh  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  network-policies.yaml  pdb.yaml
k8s/configmaps/: app-config.yaml  postgres-init.yaml
k8s/deployments/: ai-service.yaml  api-gateway.yaml  extract-content-service.yaml  extract-metadata-service.yaml  validation-service.yaml  workflow-orchestrator.yaml
k8s/services/: postgres.yaml  redis.yaml
k8s/volumes/: persistent-volume.yaml
services/ai-service/: .env.docker  Dockerfile  main.py  pyproject.toml
services/ai-service/core/: concrete_ai_manager.py
services/ai-service/support/: callback_handler.py  useful_functions.py
services/api-gateway-service/: .env.docker  Dockerfile  README.md  ai_worker_example.py  docker-entrypoint.sh  extract_metadata_worker_service.py  main.py  media_processing_worker_example.py  media_processing_worker_service.py  pyproject.toml  validation_worker_example.py  validation_worker_redis.py  validation_worker_service.py  workflow_orchestrator_example.py
services/api-gateway-service/cloud_management/: cloud_manager.py
services/api-gateway-service/contracts/: job_schemas.py
services/api-gateway-service/custom_middleware/: error_middleware.py  logging_middleware.py  rate_limiting_middleware.py
services/api-gateway-service/db_config/: db_settings.py
services/api-gateway-service/db_management/: db_manager.py  db_settings.py
services/api-gateway-service/interfaces/: file_storage_interface.py  job_and_asset_storage_interface.py  singleton_interface.py
services/api-gateway-service/local_storages/: in_memory_job_and_asset_storage.py  local_file_storage.py
services/api-gateway-service/logging_management/: logging_manager.py
services/api-gateway-service/models/: models.py  temp_db.py
services/api-gateway-service/needs/: INeedCloudManager.py  INeedRedisManager.py  ResolveNeedsManager.py
services/api-gateway-service/redis_management/: redis_manager.py
services/api-gateway-service/routers/: auth.py  auth_router.py  rate_limit.py  redis_router.py  security.py  users.py  users_router.py  v1.py  v1_router.py
services/api-gateway-service/support/: constants.py  security.py  singleton_interface.py  storage_abstraction.py  support_functions.py
services/api-gateway-service/temp/: WORK_PLAN.md
services/api-gateway-service/tests/: conftest.py  test_extract_metadata_worker_client.py  test_extract_metadata_worker_service.py  test_extract_text_worker_client.py  test_extract_text_worker_service.py  test_fastapi_redis_endpoints.py  test_ingestion.py  test_main_logging_and_exception.py  test_rate_limit.py  test_redis_cleanup.py  test_redis_pubsub.py  test_users.py  test_validation_service_logging.py  test_validation_worker_client.py  test_validation_worker_service.py  test_workflow_orchestrator.py  test_workflow_orchestrator_logging.py  test_workflow_orchestrator_workers.py
services/api-gateway-service/views/: ingestion_views.py  users_views.py
services/api-gateway-service/worker_clients/: ai_worker_client.py  base_worker_client.py  extract_metadata_worker_client.py  extract_text_worker_client.py  media_processing_worker_client.py  validation_worker_client.py
services/api-gateway-service/workers/: ai_worker_service.py  extract_metadata_worker_service.py  extract_text_worker_service.py  validation_worker_service.py
services/extract-content-service/: Dockerfile  README.md  main.py  pyproject.toml
services/extract-metadata-service/: Dockerfile  README.md  main.py  pyproject.toml
services/media-processing-service/: pyproject.toml
services/validation-service/: Dockerfile  main.py  pyproject.toml
services/workflow-orchestrator-service/: .env.docker  Dockerfile  README.md  main.py  media_processing_worker_example.py  pyproject.toml
services/workflow-orchestrator-service/routers/: redis_router.py
services/workflow-orchestrator-service/tests/: conftest.py  test_redis_cleanup.py  test_workflow_orchestrator.py
services/workflow-orchestrator-service/worker_clients/: ai_worker_client.py  extract_metadata_worker_client.py  extract_text_worker_client.py  validation_worker_client.py
shared-lib/: README.md  pyproject.toml
shared-lib/shared_lib/cloud_management/: cloud_manager.py
shared-lib/shared_lib/custom_middleware/: error_middleware.py  rate_limiting_middleware.py
shared-lib/shared_lib/local_storages/: in_memory_job_and_asset_storage.py  local_file_storage.py
shared-lib/shared_lib/logging_management/: logging_manager.py
shared-lib/shared_lib/needs/: INeedCloudManager.py  INeedRedisManager.py  ResolveNeedsManager.py
shared-lib/shared_lib/redis_management/: redis_manager.py
shared-lib/shared_lib/support/: security.py  storage_abstraction.py  support_functions.py
shared-lib/shared_lib/worker_clients/: base_worker_client.py
