[project]
name = "shared-lib"
version = "0.2.2"
description = "Shared code for microservices"
authors = [
    {name = "Sunzheini",email = "daniel_zorov@abv.bg"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.setuptools]
packages = ["shared_lib"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
