[project]
name = "api-gateway-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Sunzheini",email = "daniel_zorov@abv.bg"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.117.1,<0.118.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "langgraph (>=0.6.8,<0.7.0)",
    "langgraph-sdk (>=0.2.9,<0.3.0)",
    "langgraph-checkpoint (>=2.1.2,<3.0.0)",
    "langgraph-prebuilt (>=0.6.4,<0.7.0)",
    "pylint (>=4.0.0,<5.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "user-agents (>=2.2.0,<3.0.0)",
    "pdfplumber (>=0.11.7,<0.12.0)",
#    "shared-lib @ file:///app/shared-lib",
    "shared-lib @ file:///D:/Study/Projects/Github/AegisAI/shared-lib",
    "boto3 (>=1.40.72,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
