[project]
name = "validation-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Sunzheini",email = "daniel_zorov@abv.bg"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.119.1,<0.120.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
#    "shared-lib @ file:///app/shared-lib",
    "shared-lib @ file:///D:/Study/Projects/Github/AegisAI/shared-lib",
    "redis (>=7.0.0,<8.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "user-agents (>=2.2.0,<3.0.0)",
    "boto3 (>=1.40.72,<2.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "pylint (>=4.0.4,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
