[project]
name = "workflow-orchestrator-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Sunzheini",email = "daniel_zorov@abv.bg"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "fastapi[standard] (>=0.119.1,<0.120.0)",
    "redis (>=6.4.0,<7.0.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "langgraph (>=0.6.8,<0.7.0)",
    "pylint (>=4.0.0,<5.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "shared-lib @ file:///D:/Study/Projects/Github/AegisAI/shared-lib",
    "user-agents (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
